Issue #19398: Extra slash no longer added to sys.path components in case of empty compile-time PYTHONPATH components.  This fixes some tests in -S or -I modes.